--- a/Stellar.Common/Stellar.Common.csproj
+++ b/Stellar.Common/Stellar.Common.csproj
@@ -48,4 +48,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>Stellar.Common.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>  
+
 </Project>
